# wc_discrepancies

./: .gitignore  LICENSE
detector/: README.md  pyproject.toml
detector/src/: __main__.py  config.py  datatypes.py  detection.py  discrepancy_logging.py  mkcfg.py  server.py  terminal.py
detector/src/detector/: __main__.py  config.py  datatypes.py  detection.py  discrepancy_logging.py  errors.py  mkcfg.py  server.py  terminal.py  terminal_utilites.py  wc.py
viewer/: package-lock.json  package.json
viewer/public/: index.html  manifest.json
viewer/src/: App.js  index.js
viewer/src/api/: bestInfo.js  call.js  constants.js  detect.js  discrepancies.js  logs.js  reportBug.js  resolve.js  resolvedDiscrepancies.js  status.js
viewer/src/components/: DiscrepancyCard.js  Matrix.js  NavigationBarLayout.js  ObjectPropertiesList.js  PageLoading.js  SmallPage.js
viewer/src/hooks/: useSelectedDiscrepancy.js  useServerError.js
viewer/src/pages/: Details.js  Help.js  Home.js  Logs.js  ReportBug.js  Resolve.js  ResolvedDiscrepancies.js  Resolving.js  ServerError.js
viewer/src/styles/: center-flex.css  discrepancy-card.css  margin-children.css  navbar-children-margin.css  navbar-inner.css  page-outlet-container.css  push-right.css
